hooked up js concat and off-canvas navigation

--- a/site/include/footer.html
+++ b/site/include/footer.html
@@ -6,11 +6,7 @@
     </div> <!--end main container-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/custom.modernizr.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.fitvids.js"></script>
-    <script src="js/jquery.jpanelmenu.min.js"></script>
-    <script src="js/template.js"></script>
+    <script src="template.js"></script>
 
 </body>
 </html>
