--- a/site/less/style.less
+++ b/site/less/style.less
@@ -48,5 +48,8 @@
 @import "bootstrap/utilities.less";
 @import "bootstrap/responsive-utilities.less";
 
+// Jasny Add-ons
+@import "bootstrap/jasny.less";
+
 // Custom Styles 
 @import "custom.less";
