added home page slider, services pages

--- a/site/include/footer.html
+++ b/site/include/footer.html
@@ -1,6 +1,12 @@
     
-		<footer>
-		    <p>© Company 2014</p>
+		<footer class="site-footer">
+		    <a class="scrollup" href="#"><i class="fa fa-angle-up"></i> Back to Top</a>
+		    <nav class="footer-nav" role="navigation">
+		    	<ul></ul>
+		    </nav>
+		    <div class="copyright">
+		    	<p>© Sequoia</p>
+		    </div>
 		</footer>
 
     </div> <!--end main container-->
