--- a/site/include/header.html
+++ b/site/include/header.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sequoia v2</title>
 
-    <!-- Bootstrap -->
+    <!-- Font Awesome via CDN -->
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
+    <!-- Bootstrap + Custom Styles -->
     <link href="css/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -17,23 +21,54 @@
     <![endif]-->
 </head>
 <body>
-    <div class="container">
+    <div class="container site-wrapper">
         
-        <nav id="myNavmenu" class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation">
-          <ul class="nav navmenu-nav">
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
+        <nav id="mobile-nav" class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation">
+          <ul class="nav navmenu-nav"></ul>
         </nav>
-        <div class="navbar navbar-default navbar-fixed-top">
-          <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
+        <div class="mobile-navbar">
+          <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target="#mobile-nav" data-canvas="body">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
         </div>
 
-        <header>
-            <h1>Header include test</h1>
+        <header class="site-header">
+            <section class="top-bar">
+                <div class="text-area">
+                    <i class="fa fa-map-marker"></i>
+                    <p>123 Main Street, Springfield, IL</p>
+                </div>
+                <div class="dropdown social">
+                    <a id="dLabel" role="button" data-toggle="dropdown" data-target="#" href="">
+                        <i class="fa fa-thumbs-o-up"></i> Follow Us
+                    </a>
+                    <ul class="dropdown-menu social-links" role="menu" aria-labelledby="dLabel">
+                        <li><a href="#" class="twitter">Twitter</a></li>
+                        <li><a href="#" class="facebook">Facebook</a></li>
+                        <li><a href="#" class="instagram">Instagram</a></li>
+                        <li><a href="#" class="google">Google+</a></li>
+                        <li><a href="#" class="pinterest">Pinterest</a></li>
+                    </ul>
+                </div>
+                <div class="phone">
+                    <i class="fa fa-phone"></i>
+                    <p>800-555-1234</p>
+                </div>
+            </section>
+            <section class="main-strip">
+                <h1 class="text">Sequoia</h1>
+                <h1 class="logo" style="display:none;"><img src="http://placehold.it/500x100&text=logo"></h1>  <!-- Maybe set img as background and use "contain" css property? -->
+                <nav class="main-nav">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </section>
         </header>
