--- a/site/less/bootstrap/variables.less
+++ b/site/less/bootstrap/variables.less
@@ -39,11 +39,11 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:  "nimbus-sans-extended", sans-serif;
-@font-family-serif:       "freight-text-pro", georgia, serif;
+@font-family-sans-serif:  "open sans", sans-serif;
+@font-family-serif:       "merriweather", georgia, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
-@font-family-base:        @font-family-serif;
+@font-family-base:        @font-family-sans-serif;
 
 @font-size-base:          14px;
 @font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
