--- a/site/less/style.less
+++ b/site/less/style.less
@@ -42,7 +42,7 @@
 @import "bootstrap/modals.less";
 @import "bootstrap/tooltip.less";
 @import "bootstrap/popovers.less";
-//@import "carousel.less";
+@import "bootstrap/carousel.less";
 
 // Utility classes
 @import "bootstrap/utilities.less";
