--- a/site/less/style.less
+++ b/site/less/style.less
@@ -51,5 +51,11 @@
 // Jasny Add-ons
 @import "bootstrap/jasny.less";
 
+// Lightbox
+@import "bootstrap/lightbox.less";
+
+// Grayscale
+@import "bootstrap/gray.less";
+
 // Custom Styles 
 @import "custom.less";
