--- a/site/less/style.less
+++ b/site/less/style.less
@@ -48,6 +48,9 @@
 @import "bootstrap/utilities.less";
 @import "bootstrap/responsive-utilities.less";
 
+// Font Awesome
+@import "font-awesome/font-awesome.less";
+
 // Jasny Add-ons
 @import "bootstrap/jasny.less";
 
