--- a/site/less/custom.less
+++ b/site/less/custom.less
@@ -778,6 +778,23 @@ body {
 	font-style: italic;
 	display: block;
 	margin: 22px 0;
+	&:after {
+		content: "\f105";
+		font-family: 'FontAwesome';
+		opacity: 0;
+		margin-left: -5px;
+		font-size: 13px;
+		display: inline;
+		font-style: normal;
+		.transition(all .2s ease-in-out);
+	}
+	&:hover {
+		text-decoration: none;
+		&:after {
+			opacity: 0.7;
+			margin-left: 10px;
+		}
+	}
 }
 .site-footer {
 	height: 60px;
@@ -1042,6 +1059,11 @@ body {
 				}
 				.icon {
 					display: inline-block;
+				}
+				a {
+					&:hover {
+						text-decoration: none;
+					}
 				}
 			}
 		}
