hooked up images folder to be included with build, moved pages in pages folder

--- a/site/less/custom.less
+++ b/site/less/custom.less
@@ -89,7 +89,7 @@ body {
 		}
 	}
 	&.divide {
-		background-image: url(../../images/vert-divider.svg);
+		background-image: url(../images/vert-divider.svg);
 		background-position: left top;
 		background-repeat: repeat-y;
 		background-size: 100%;
@@ -439,7 +439,7 @@ body {
 		width: 100%;
 		position: absolute;
 		bottom: -50px;
-		background: url(../../images/shadow_curl.png) top center no-repeat;
+		background: url(../images/shadow_curl.png) top center no-repeat;
 		background-size: 100%; 
 	}
 	.carousel-caption {
