did some stuff, apparently

--- a/site/include/header.html
+++ b/site/include/header.html
@@ -17,6 +17,10 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- RSS -->
+    <link rel="alternate" type="application/rss+xml" title="Full Blog Entries Feed" href="/feed" />
+
 </head>
 <body>
     <div class="container site-wrapper">
