--- a/site/include/slider.html
+++ b/site/include/slider.html
@@ -8,30 +8,16 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
+        <!-- repeatoldest:slider:10 -->
         <figure class="item active">
-            <img src="http://lorempixel.com/g/1240/500">
-            <figcaption class="carousel-caption">
-                <div class="caption-content">
-                    Nullam id dolor id nibh ultricies vehicula ut id elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                </div>
-            </figcaption>
+            %CONTENT%
+            <!-- owner -->
+            <a href="%URL%" class="slider-edit-target">
+                <i class="fa fa-edit"></i>
+            </a>
+            <!-- endowner -->
         </figure>
-        <figure class="item">
-            <img src="http://lorempixel.com/g/1240/500">
-            <figcaption class="carousel-caption">
-                <div class="caption-content">
-                    Donec ullamcorper nulla non metus auctor fringilla. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nulla vitae elit libero, a pharetra augue.
-                </div>
-            </figcaption>
-        </figure>
-        <figure class="item">
-            <img src="http://lorempixel.com/g/1240/500">
-            <figcaption class="carousel-caption">
-                <div class="caption-content">
-                    Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit.
-                </div>
-            </figcaption>
-        </figure>
+        <!-- endrepeatoldest -->
     </div>
 
     <!-- Controls -->
