--- a/site/less/bootstrap/variables.less
+++ b/site/less/bootstrap/variables.less
@@ -19,6 +19,16 @@
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
+// Colo Picker Options
+
+@color-blue: #4579ce;
+@color-orange: #dc9018;
+@color-green: #41c38a;
+@color-red: #c72c2c;
+@color-purple: #8c68b5;
+@color-yellow: #f4d12b;
+@color-gray: #b4b4b4;
+@color-black: #333;
 
 //== Scaffolding
 //
