--- a/site/less/style.less
+++ b/site/less/style.less
@@ -60,5 +60,8 @@
 // Grayscale
 @import "bootstrap/gray.less";
 
+// Template Color Picker
+@import "color-picker.less";
+
 // Custom Styles 
 @import "custom.less";
