--- a/site/include/footer.html
+++ b/site/include/footer.html
@@ -12,6 +12,9 @@
     </div> <!--end main container-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script>
+        $('.carousel .carousel-inner figure.item').not(':first').removeClass('active');
+    </script>
     <script src="template.js"></script>
 
 </body>
