--- a/site/less/custom.less
+++ b/site/less/custom.less
@@ -92,7 +92,7 @@ body {
 		background-image: url(../images/vert-divider.svg);
 		background-position: left top;
 		background-repeat: repeat-y;
-		background-size: 100%;
+		background-size: 100% 1px;
 		margin-top: 50px;
 		margin-bottom: 40px;
 		article {
@@ -665,6 +665,14 @@ body {
 		}
 	}
 }
+.image-placeholder {
+	width: 0;
+	height: 0;
+	overflow: hidden;
+	img {
+		visibility: hidden;
+	}
+}
 .secondary-area {
 	.row;
 	background: fadeout(black, 97%);
@@ -873,6 +881,8 @@ body {
 	height: 180px;
 	border-radius: 0 !important;
 	margin-bottom: 10px;
+	position: relative;
+	background: #777;
 	.container {
 		height: 100%;
 		padding-bottom: 2px;
@@ -883,11 +893,30 @@ body {
 		font-weight: 600;
 		margin: 0;
 		line-height: 1.3;
+		color: white;
 		.vert-align;
 	}
 	&.map {
 		padding: 0;
 	}
+	.background {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-size: cover;
+		&.grayscale {
+			opacity: 0.2;
+		}
+	}
+}
+.masthead-color {
+	height: 0;
+	width: 0;
+	overflow: hidden;
 }
 #barley-form {
 	p {
@@ -989,6 +1018,62 @@ body {
 	background-color: transparent;
 }
 
+// Masthead Targets 
+
+.bg-target, .color-target, .slider-edit-target {
+	position: absolute;
+	bottom: 14px;
+	right: 14px;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	background-color: fadeout(black, 15%);
+	box-shadow: 0 1px 3px 0 fadeout(black, 85%);
+	overflow: hidden;
+	cursor: pointer;
+	.font-smooth;
+	i {
+		font-size: 15px;
+		color: white;
+		display: block;
+		width: 100%;
+		text-align: center;
+		line-height: 31px;
+	}
+	img {
+		opacity: 0;
+	}
+}
+.bg-target {
+	background-color: transparent;
+	box-shadow: none;
+	&:before {
+		width: 30px;
+		height: 30px;
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		font-size: 15px;
+		color: white;
+		text-align: center;
+		line-height: 31px;
+		font-family: 'FontAwesome';
+		content: "\f03e";
+		cursor: pointer;
+		border-radius: 50%;
+		background-color: fadeout(black, 15%);
+		box-shadow: 0 1px 3px 0 fadeout(black, 85%);
+	}
+}
+.color-target {
+	right: 52px;
+}
+.slider-edit-target {
+	bottom: auto;
+	top: 14px;
+	z-index: 300;
+}
 
 @media (min-width: 768px) {
 	.mobile-navbar {
