Removed build folder. Added Slider Panels to settings.json. Adjusted HTML for Sliders to remove need for nested Barley IDs. Added default content for first run of homepage for slider content.

--- a/site/include/slider.html
+++ b/site/include/slider.html
@@ -18,6 +18,17 @@
             <!-- endowner -->
         </figure>
         <!-- endrepeatoldest -->
+
+        <!-- default_message:episodes -->
+        <figure class="item active">
+            <img src="http://lorempixel.com/g/1240/500">
+            <figcaption class="carousel-caption">
+                <div class="caption-content">
+                    To add a new panels to this slider, choose "Add New" > "Slider Panel" from the Barley Menu.
+                </div>
+            </figcaption>
+        </figure>
+        <!-- enddefault_message -->
     </div>
 
     <!-- Controls -->
