Updated Package to latest LESS. Google Map is now based on business address. Added default messages for each index. Renamed portfolio to gallery.

--- a/site/include/slider.html
+++ b/site/include/slider.html
@@ -19,7 +19,7 @@
         </figure>
         <!-- endrepeatoldest -->
 
-        <!-- default_message:episodes -->
+        <!-- default_message:slider -->
         <figure class="item active">
             <img src="http://lorempixel.com/g/1240/500">
             <figcaption class="carousel-caption">
