--- a/site/include/header.html
+++ b/site/include/header.html
@@ -68,7 +68,7 @@
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/team.html">About Us</a></li>
                         <li><a href="/services.html">Services</a></li>
-                        <li><a href="/gallery.html">Portfolio</a></li>
+                        <li><a href="/gallery.html">Gallery</a></li>
                         <li><a href="/blog.html">Blog</a></li>
                         <li><a href="/contact.html">Contact Us</a></li>
                         <!-- endbarleynav -->
