Moved default message to index pages. Oops. Added one for Team. Fixed slider caption. Addresses #2

--- a/site/include/slider.html
+++ b/site/include/slider.html
@@ -11,6 +11,11 @@
         <!-- repeatoldest:slider:10 -->
         <figure class="item active">
             %CONTENT%
+            <figcaption class="carousel-caption">
+                <div class="caption-content">
+                    %CAPTION%
+                </div>
+            </figcaption>
             <!-- owner -->
             <a href="%URL%" class="slider-edit-target">
                 <i class="fa fa-edit"></i>
