Copyright is editable. Fixed #3

--- a/site/include/footer.html
+++ b/site/include/footer.html
@@ -5,7 +5,7 @@
 		    	<ul></ul>
 		    </nav>
 		    <div class="copyright">
-		    	<p>© Sequoia</p>
+		    	<p data-barley="footer_copyright" data-barley-editor="mini">© Sequoia</p>
 		    </div>
 		</footer>
 
