--- a/site/include/promo.html
+++ b/site/include/promo.html
@@ -1,5 +1,5 @@
 <section class="container">
     <div class="secondary-area promo">
-        <div class="promo-message">Vestibulum id ligula sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. <a href="#">Find out more</a></div>
+        <div class="promo-message" data-barley="promo_message" data-barley-editor="plus">Vestibulum id ligula sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. <a href="#">Find out more</a></div>
     </div>
 </section>
