--- a/site/include/header.html
+++ b/site/include/header.html
@@ -60,7 +60,7 @@
                 </div>
             </section>
             <section class="main-strip">
-                <h1 class="text">Sequoia</h1>
+                <h1 class="text" data-barley="site_title_text" data-barley-editor="mini">Sequoia</h1>
                 <h1 class="logo" style="display:none;"><img src="http://placehold.it/500x100&text=logo"></h1>  <!-- Maybe set img as background and use "contain" css property? -->
                 <nav class="main-nav">
                     <ul class="navigation right hide-for-small" data-barley-navigation="left">
