added masthead barlification, removed editor on social drop down

--- a/site/include/header.html
+++ b/site/include/header.html
@@ -47,11 +47,11 @@
                         <i class="fa fa-thumbs-o-up"></i> Follow Us
                     </a>
                     <ul class="dropdown-menu social-links" role="menu" aria-labelledby="social">
-                        <li data-barley="social_acct_a" data-barley-editor="mini" data-placeholder="+ Add Account"><a href="#" class="twitter">Twitter</a></li>
-                        <li data-barley="social_acct_b" data-barley-editor="mini" data-placeholder="+ Add Account"><a href="#" class="facebook">Facebook</a></li>
-                        <li data-barley="social_acct_c" data-barley-editor="mini" data-placeholder="+ Add Account"><a href="#" class="instagram">Instagram</a></li>
-                        <li data-barley="social_acct_d" data-barley-editor="mini" data-placeholder="+ Add Account"><a href="#" class="google">Google+</a></li>
-                        <li data-barley="social_acct_e" data-barley-editor="mini" data-placeholder="+ Add Account"><a href="#" class="pinterest">Pinterest</a></li>
+                        <li><a href="#" class="twitter">Twitter</a></li>
+                        <li><a href="#" class="facebook">Facebook</a></li>
+                        <li><a href="#" class="instagram">Instagram</a></li>
+                        <li><a href="#" class="google">Google+</a></li>
+                        <li><a href="#" class="pinterest">Pinterest</a></li>
                     </ul>
                 </div>
                 <div class="phone">
@@ -66,11 +66,11 @@
                     <ul class="navigation right hide-for-small" data-barley-navigation="left">
                         <!-- barleynav -->
                         <li><a href="/index.html">Home</a></li>
-                        <li><a href="/team.html">About Us</a></li>
+                        <li><a href="/team.html">About</a></li>
                         <li><a href="/services.html">Services</a></li>
                         <li><a href="/gallery.html">Gallery</a></li>
                         <li><a href="/blog.html">Blog</a></li>
-                        <li><a href="/contact.html">Contact Us</a></li>
+                        <li><a href="/contact.html">Contact</a></li>
                         <!-- endbarleynav -->
                     </ul>
                 </nav>
