--- a/site/less/bootstrap/grid.less
+++ b/site/less/bootstrap/grid.less
@@ -9,15 +9,18 @@
 
 .container {
   .container-fixed();
+  width: 100%;
 
+  /*
   @media (min-width: @screen-sm-min) {
-    width: @container-sm;
+    max-width: @container-sm;
   }
   @media (min-width: @screen-md-min) {
-    width: @container-md;
+    max-width: @container-md;
   }
+  */
   @media (min-width: @screen-lg-min) {
-    width: @container-lg;
+    max-width: @container-lg;
   }
 }
 
